--- a/config/west.yml
+++ b/config/west.yml
@@ -11,6 +11,9 @@ manifest:
     # nice_oled - dongle_display!view - oled Adapter
     - name: mctechnology17
       url-base: https://github.com/mctechnology17
+    # prospector dongle display
+    - name: carrefinho
+      url-base: https://github.com/carrefinho
   projects:
     - name: zmk
       remote: zmkfirmware
@@ -35,6 +38,10 @@ manifest:
     # oled Adapter
     - name: zmk-oled-adapter
       remote: mctechnology17
+      revision: main
+    # prospector dongle display
+    - name: prospector-zmk-module
+      remote: carrefinho
       revision: main
   self:
     path: config
