--- a/boards/shields/corne/corne_dongle_xiao.conf
+++ b/boards/shields/corne/corne_dongle_xiao.conf
@@ -22,3 +22,7 @@ CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
 ### DEBUG OPTIONS
 # CONFIG_ZMK_USB_LOGGING=y
 # CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
+
+### PROSPECTOR OPTIONS
+CONFIG_PROSPECTOR_FIXED_BRIGHTNESS=100
+CONFIG_PROSPECTOR_USE_AMBIENT_LIGHT_SENSOR=n
