--- a/build.yaml
+++ b/build.yaml
@@ -122,6 +122,19 @@ include:
     artifact-name: puchi_corne_left_peripheral_oled
     ### nice_oled END ###
 
+  
+    ### Peripheral START ###
+  - board: nice_nano_v2
+    shield: corne_left_peripheral
+    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+    artifact-name: corne_left_peripheral
+
+  - board: nice_nano_v2
+    shield: corne_right_peripheral
+    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+    artifact-name: corne_right_peripheral
+
+
     ### Xiao_Dongle START ###
   - board: seeeduino_xiao_ble
     shield: corne_dongle_xiao
