--- a/boards/shields/corne/corne_dongle_xiao.conf
+++ b/boards/shields/corne/corne_dongle_xiao.conf
@@ -26,3 +26,6 @@ CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
 ### PROSPECTOR OPTIONS
 CONFIG_PROSPECTOR_FIXED_BRIGHTNESS=100
 CONFIG_PROSPECTOR_USE_AMBIENT_LIGHT_SENSOR=n
+
+CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
