--- a/config/corne.conf
+++ b/config/corne.conf
@@ -71,8 +71,9 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 
 ### RGB UNDERGLOW
 # uncomment to enable RGB Underglow or backlight
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 # apaga si no se usa el teclado
 # CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 # 0	Solid color    1 Breathe     2	Spectrum     3	Swirl
@@ -86,10 +87,10 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 # CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30
 
 # # Brightness step in percent used by RGB actions default 10
-# CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=2
-# CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=240
-# CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=10
-# CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=15
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=2
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=240
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=10
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=15
 
 # Uncomment the line below to disable external power toggling by the underglow.
 # By default toggling the underglow on and off also toggles external power
