--- a/boards/shields/corne/corne_dongle_xiao.conf
+++ b/boards/shields/corne/corne_dongle_xiao.conf
@@ -29,3 +29,5 @@ CONFIG_PROSPECTOR_USE_AMBIENT_LIGHT_SENSOR=n
 
 CONFIG_ZMK_RGB_UNDERGLOW=n
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
+
+CONFIG_ZMK_SLEEP=n
