--- a/build.yaml
+++ b/build.yaml
@@ -57,97 +57,37 @@ include:
   ### CORNE START ###
     ### nice_view START ###
     # nice_nano_v2 + nice_view_gem
-  - board: nice_nano_v2
-    shield: corne_left nice_view_adapter nice_view_gem
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Corne_View\"
-    artifact-name: nice_corne_left_view
-    snippet: studio-rpc-usb-uart
-  - board: nice_nano_v2
-    shield: corne_right nice_view_adapter nice_view_gem
-    cmake-args: -DCONFIG_NICE_VIEW_GEM_ANIMATION=y
-    artifact-name: nice_corne_right_view
+  # - board: nice_nano_v2
+  #   shield: corne_left nice_view_adapter nice_view_gem
+  #   cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Corne_View\"
+  #   artifact-name: nice_corne_left_view
+  #   snippet: studio-rpc-usb-uart
+  # - board: nice_nano_v2
+  #   shield: corne_right nice_view_adapter nice_view_gem
+  #   cmake-args: -DCONFIG_NICE_VIEW_GEM_ANIMATION=y
+  #   artifact-name: nice_corne_right_view
 
-    # puchi_ble_v1 + nice_view_gem
-  - board: puchi_ble_v1
-    shield: corne_left nice_view_adapter nice_view_gem
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Puchi_Corne_V\"
-    artifact-name: puchi_corne_left_view
-    snippet: studio-rpc-usb-uart
-  - board: puchi_ble_v1
-    shield: corne_right nice_view_adapter nice_view
-    artifact-name: puchi_corne_right_view
+  #   # puchi_ble_v1 + nice_view_gem
+  # - board: puchi_ble_v1
+  #   shield: corne_left nice_view_adapter nice_view_gem
+  #   cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Puchi_Corne_V\"
+  #   artifact-name: puchi_corne_left_view
+  #   snippet: studio-rpc-usb-uart
+  # - board: puchi_ble_v1
+  #   shield: corne_right nice_view_adapter nice_view
+  #   artifact-name: puchi_corne_right_view
 
     # peripheral_left + nice_nano_v2 + nice_view_gem
   - board: nice_nano_v2
-    shield: corne_left_peripheral nice_view_adapter nice_view_gem
-    cmake-args: -DCONFIG_NICE_VIEW_GEM_ANIMATION=y
+    shield: corne_left_peripheral nice_view_adapter nice_view
     artifact-name: nice_corne_left_peripheral_view
 
     # peripheral_left + puchi_ble_v1 + nice_view_gem
   - board: puchi_ble_v1
-    shield: corne_left_peripheral nice_view_adapter nice_view_gem
-    cmake-args: -DCONFIG_NICE_VIEW_GEM_ANIMATION=y
+    shield: corne_left_peripheral nice_view_adapter nice_view
     artifact-name: puchi_corne_left_peripheral_view
     ### nice_view END ###
 
-    ### nice_oled START ###
-    # nice_nano_v2 + nice_oled
-  - board: nice_nano_v2
-    shield: corne_left nice_oled
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Corne_Oled\"
-    artifact-name: nice_corne_left_oled
-    snippet: studio-rpc-usb-uart
-  - board: nice_nano_v2
-    shield: corne_right nice_oled
-    artifact-name: nice_corne_right_oled
-
-    # puchi_ble_v1 + nice_oled
-  - board: puchi_ble_v1
-    shield: corne_left nice_oled
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Puchi_Corne_O\"
-    artifact-name: puchi_corne_left_oled
-    snippet: studio-rpc-usb-uart
-  - board: puchi_ble_v1
-    shield: corne_right nice_oled
-    artifact-name: puchi_corne_right_oled
-
-    # peripheral_left + nice_nano_v2 + nice_oled
-  - board: nice_nano_v2
-    shield: corne_left_peripheral nice_oled
-    artifact-name: nice_corne_left_peripheral_oled
-
-    # peripheral_left + puchi_ble_v1 + nice_oled
-  - board: puchi_ble_v1
-    shield: corne_left_peripheral nice_oled
-    artifact-name: puchi_corne_left_peripheral_oled
-    ### nice_oled END ###
-
-  
-    ### Peripheral START ###
-  - board: nice_nano_v2
-    shield: corne_left
-    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
-    artifact-name: corne_left_peripheral
-
-  - board: nice_nano_v2
-    shield: corne_right
-    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
-    artifact-name: corne_right_peripheral
-
-
-    ### Xiao_Dongle START ###
-  - board: seeeduino_xiao_ble
-    shield: corne_dongle_xiao
-    #  -DCONFIG_ZMK_USB=y  -DCONFIG_ZMK_BLE=y
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Xiao_Dongle\" -DCONFIG_ZMK_STUDIO=y
-    artifact-name: xiao_corne_dongle
-    snippet: studio-rpc-usb-uart
-  - board: seeeduino_xiao_ble
-    shield: corne_dongle_xiao dongle_display
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Xiao_Dongle_O\"
-    artifact-name: xiao_corne_dongle_oled
-    snippet: studio-rpc-usb-uart
-    # snippet: zmk-usb-logging
   - board: seeeduino_xiao_ble
     shield: corne_dongle_xiao prospector_adapter
     cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Xiao_Dongle_P\"
