--- a/build.yaml
+++ b/build.yaml
@@ -83,8 +83,9 @@ include:
     artifact-name: nice_corne_left_peripheral_view
 
   - board: nice_nano_v2
-    shield: corne_right_peripheral nice_view_adapter nice_view
-    artifact-name: nice_corne_right_peripheral_view
+    shield: corne_left_peripheral nice_view_adapter nice_view
+    cmake-args: -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+    artifact-name: corne_right_peripheral_view
 
 
   - board: seeeduino_xiao_ble
